[gd_scene load_steps=16 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]
[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/icons/glitch-icon-44.png" type="Texture" id=3]
[ext_resource path="res://assets/base_out_atlas.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 506, 96, 44, 37 )

[sub_resource type="ParticlesMaterial" id=2]

[sub_resource type="CanvasItemMaterial" id=3]
next_pass = SubResource( 2 )
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 479.017, 65.3481, 102.303, 94.4459 )
margin_left = 7.1288
margin_right = 6.62088
margin_top = 4.29031
margin_bottom = 4.25212

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.992157, 0.847059, 0.537255, 0.501961 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.992157, 0.847059, 0.537255, 0.290196 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.992157, 0.847059, 0.537255, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.992157, 0.847059, 0.537255, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 2 )

[node name="lobby" type="Node"]
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
margin_left = -1840.0
margin_top = -1085.0
margin_right = 2462.0
margin_bottom = 1628.0
texture = SubResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InfoPanel" type="Panel" parent="CanvasLayer"]
material = SubResource( 3 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -399.0
margin_top = -287.0
margin_right = 401.0
margin_bottom = 292.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="userNameLb" type="Label" parent="CanvasLayer/InfoPanel"]
margin_left = 266.365
margin_top = 23.0609
margin_right = 360.365
margin_bottom = 44.0609
text = "User Name :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="userName" type="LineEdit" parent="CanvasLayer/InfoPanel"]
margin_left = 363.0
margin_top = 11.2649
margin_right = 538.0
margin_bottom = 50.2649
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sentry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="CanvasLayer/InfoPanel"]
margin_left = 38.0
margin_top = 87.0
margin_right = 295.0
margin_bottom = 316.0
custom_styles/bg = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playersList" type="Label" parent="CanvasLayer/InfoPanel"]
margin_left = 40.1393
margin_top = 61.1072
margin_right = 119.139
margin_bottom = 83.1072
text = "Player List"

[node name="join" type="Button" parent="CanvasLayer/InfoPanel"]
margin_left = 596.47
margin_top = 8.1192
margin_right = 709.47
margin_bottom = 47.1192
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverStart" type="Button" parent="CanvasLayer/InfoPanel"]
margin_left = 34.3009
margin_top = 14.5244
margin_right = 250.301
margin_bottom = 50.5244
custom_styles/normal = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sever to be"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputMap" type="RichTextLabel" parent="CanvasLayer/InfoPanel"]
margin_left = 396.0
margin_top = 128.0
margin_right = 527.0
margin_bottom = 188.0
custom_fonts/normal_font = SubResource( 11 )
text = "Arrow : Move
A: Throw
B: Bomb"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Button" parent="CanvasLayer"]
margin_left = 727.65
margin_top = 82.5404
margin_right = 803.65
margin_bottom = 152.54
toggle_mode = true
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/InfoPanel/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/InfoPanel/serverStart" to="." method="_on_serverStart_pressed"]
[connection signal="toggled" from="CanvasLayer/Info" to="." method="_on_Info_toggled"]
